# ETH-BUCHAREST-02

./: .gitignore  BUSINESS_PLAN.md  README.md  address.cjs  address.js  address.mjs  cache_contract.sh  clean_project.sh  contract_address.txt  create_new_project.sh  deploy_arbi.sh  deploy_arbiproof.sh  deploy_contract.sh  deploy_new_contract.sh  deploy_simple.sh  get_address.html  get_address.js  get_address.md  install_toolchain.sh  package-lock.json  package.json  private_key.txt  rust-toolchain.toml  setup_wallet.sh  simple_address_tool.html  submission.md  test_and_deploy.sh  test_arbiproof.sh  test_contract.js  updated_lib.rs  verify_contract.sh  wallet_address.txt  wallet_info.html
arbi-proof-contract/: Cargo.toml
arbi-proof-contract/src/: lib.rs  main.rs
arbi-proof-new/: Cargo.toml  README.md  rust-toolchain.toml
arbi-proof-new/src/: lib.rs
contracts/arbi-proof/: Cargo.toml  rust-toolchain.toml
contracts/arbi-proof/backup/: Cargo.toml
contracts/arbi-proof/backup/src/: lib.rs
contracts/arbi-proof/src/: lib.rs
docs/: BENCHMARKS.md  BUSINESS_PLAN.md  business_model.md
scripts/: test_contract.sh
src/contracts/: ArbiProofSimulator.ts
src/hooks/: useArbiProof.ts
tests/: test_arbiproof.cjs  test_arbiproof.js
