[package]
name = "arbi-proof-new"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# Enable both lib and bin targets
[[bin]]
name = "arbi-proof-new"
path = "src/main.rs"

[dependencies]
stylus-sdk = "0.8.3"
hex-literal = "0.4.1"
sha3 = "0.10.8"

[features]
export-abi = ["stylus-sdk/export-abi"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "z"
