[package]
name = "arbi-proof-contract"
version = "0.1.0"
edition = "2021"

[dependencies]
stylus-sdk = "0.8.3"
sha3 = "0.10.8"
hex-literal = "0.4.1"
alloy-primitives = "1.0.0"

[features]
export-abi = ["stylus-sdk/export-abi"]
no-entrypoint = []


[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "s"
